--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
   text-align: center;
   align-items: center;
-  background-image: url('./images/Image.jpg');
+  background-image: url('./Image.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
